--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,13 @@
     <servlet-name>CXFServlet</servlet-name>
     <url-pattern>/cxf/*</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>EnvServlet</servlet-name>
+    <servlet-class>com.pwc.servlet.EnvServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EnvServlet</servlet-name>
+    <url-pattern>/EnvServlet</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
