--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,24 @@
 			<artifactId>json</artifactId>
 			<version>20140107</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+		<dependency>
+			<groupId>xom</groupId>
+			<artifactId>xom</artifactId>
+			<version>1.2.5</version>
+		</dependency>	
+	    <dependency>
+	        <groupId>org.apache.commons</groupId>
+	        <artifactId>commons-io</artifactId>
+	        <version>1.3.2</version>
+	        <type>jar</type>
+	    </dependency>		
+			
 	</dependencies>
 
 	<build>
