--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,16 @@
 			<artifactId>cxf-rt-transports-http-jetty</artifactId>
 			<version>2.7.10</version>
 		</dependency>
+ 		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-common-utilities</artifactId>
+			<version>2.5.11</version>
+		</dependency>           
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-rs-security-cors</artifactId>
+			 <version>2.6.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -91,7 +101,6 @@
 	        <groupId>org.apache.commons</groupId>
 	        <artifactId>commons-io</artifactId>
 	        <version>1.3.2</version>
-	        <type>jar</type>
 	    </dependency>		
 			
 	</dependencies>
