--- a/pom.xml
+++ b/pom.xml
@@ -101,8 +101,12 @@
 	        <groupId>org.apache.commons</groupId>
 	        <artifactId>commons-io</artifactId>
 	        <version>1.3.2</version>
-	    </dependency>		
-			
+	    </dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-oauth2</artifactId>
+			<version>v2-rev69-1.18.0-rc</version>
+		</dependency>
 	</dependencies>
 
 	<build>
