new Changes on the SNS framework.

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
 			<artifactId>google-api-services-oauth2</artifactId>
 			<version>v2-rev69-1.18.0-rc</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson2</artifactId>
+			<version>1.18.0-rc</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
