--- a/src/main/resources/oauthConfig.properties
+++ b/src/main/resources/oauthConfig.properties
@@ -17,8 +17,9 @@ FACEBOOK_CALLBACK = http://54.187.87.218:9090/facebookCallBack
 FACEBOOK_ACCESSTOKEN_URL = https://graph.facebook.com/oauth/access_token
 FACEBOOK_AUTHTOKEN_URL = https://www.facebook.com/dialog/oauth
 
-GOOGLE_CLIENTID = 317971618994-nuo529502295pkap9atvhhdkglia38vp.apps.googleusercontent.com
-GOOGLE_CALLBACK = http://ec2-54-187-87-218.us-west-2.compute.amazonaws.com:9090/google.html
+GOOGLE_CLIENTID = 445231370454-ikdhnr5vg0c4ebbv33in9b8pcbkgejak.apps.googleusercontent.com
+GOOGLE_CALLBACK = http://ec2-54-187-87-218.us-west-2.compute.amazonaws.com:9090/googleCallBack
+GOOGLE_SEC = weOPrTKVLqd6dq2NTCRXUlbU
 
 TWITTER = Twitter
 FACEBOOK = Facebook
