--- a/src/main/resources/access.properties
+++ b/src/main/resources/access.properties
@@ -1,4 +1,8 @@
 #
-#Mon May 12 14:25:32 CST 2014
-OAUTH_TOKEN_SEC=2XM5ZPMarXGe23pN2VlMIbyekolYM3VGuKgpQuDCwE
-OAUTH_TOKEN=WsriqOxL31QnOukq5V9oio4FjpOKpIA6CNnMQft58
+#Thu May 15 19:51:37 CST 2014
+TWITTER_TOKENCALLBACK=http\://127.0.0.1\:9090/twitter2.html
+FACEBOOK_TOKENCALLBACK=http\://127.0.0.1\:9090/facebook.html
+GOOGLE_TOKENCALLBACK=http\://127.0.0.1\:9090/google.html
+OAUTH_TOKEN_SEC=aYpRbBjCCTH9BLkoa2qn11ja8ir5hGCv8uCKdfytkz4
+LINKEDIN_TOKENCALLBACK=http\://127.0.0.1\:9090/linkedin.html
+OAUTH_TOKEN=WIO00xvLEo66dsMEozi6AOBY09F3vnnGKIASD8O75U
