--- a/src/main/resources/oauthTestConfig.properties
+++ b/src/main/resources/oauthTestConfig.properties
@@ -17,8 +17,9 @@ FACEBOOK_CALLBACK = http://127.0.0.1:9090/facebookCallBack
 FACEBOOK_ACCESSTOKEN_URL = https://graph.facebook.com/oauth/access_token
 FACEBOOK_AUTHTOKEN_URL = https://www.facebook.com/dialog/oauth
 
-GOOGLE_CLIENTID = 317971618994-nuo529502295pkap9atvhhdkglia38vp.apps.googleusercontent.com
-GOOGLE_CALLBACK = http://ec2-54-187-87-218.us-west-2.compute.amazonaws.com:9090/google.html
+GOOGLE_CLIENTID = 813483280675-h879tteoivpnmfeujgf2lg1j9t2jk9n7.apps.googleusercontent.com
+GOOGLE_CALLBACK = http://127.0.0.1:9090/googleCallBack
+GOOGLE_SEC = sPiwrUUviy7j8L8DPZcDvkZq
 
 TWITTER = Twitter
 FACEBOOK =  Facebook
