--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,53 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <display-name>home.web.cxf</display-name>
-  <description>Testing CXF in a home application</description>
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:/applicationContext.xml</param-value>
-  </context-param>
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
-  <servlet>
-    <servlet-name>CXFServlet</servlet-name>
-    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CXFServlet</servlet-name>
-    <url-pattern>/cxf/*</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>EnvServlet</servlet-name>
-    <servlet-class>com.pwc.servlet.EnvServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>EnvServlet</servlet-name>
-    <url-pattern>/EnvServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>tokenCallBack</servlet-name>
-    <servlet-class>com.pwc.servlet.CallbackServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>tokenCallBack</servlet-name>
-    <url-pattern>/twitterCallback</url-pattern>
-  </servlet-mapping> 
-   <servlet>
-    <servlet-name>linkedinCallBack</servlet-name>
-    <servlet-class>com.pwc.servlet.LinkedinCallbackServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>linkedinCallBack</servlet-name>
-    <url-pattern>/linkedinCallback</url-pattern>
-  </servlet-mapping> 
-     <servlet>
-    <servlet-name>facebookCallBack</servlet-name>
-    <servlet-class>com.pwc.servlet.FacebookCallbackServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>facebookCallBack</servlet-name>
-    <url-pattern>/facebookCallBack</url-pattern>
-  </servlet-mapping> 
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
+	<display-name>home.web.cxf</display-name>
+	<description>Testing CXF in a home application</description>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:/applicationContext.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<servlet>
+		<servlet-name>CXFServlet</servlet-name>
+		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CXFServlet</servlet-name>
+		<url-pattern>/cxf/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>EnvServlet</servlet-name>
+		<servlet-class>com.pwc.servlet.EnvServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>EnvServlet</servlet-name>
+		<url-pattern>/EnvServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>tokenCallBack</servlet-name>
+		<servlet-class>com.pwc.servlet.CallbackServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>tokenCallBack</servlet-name>
+		<url-pattern>/twitterCallback</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>linkedinCallBack</servlet-name>
+		<servlet-class>com.pwc.servlet.LinkedinCallbackServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>linkedinCallBack</servlet-name>
+		<url-pattern>/linkedinCallback</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>facebookCallBack</servlet-name>
+		<servlet-class>com.pwc.servlet.FacebookCallbackServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>facebookCallBack</servlet-name>
+		<url-pattern>/facebookCallBack</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>googleCallBack</servlet-name>
+		<servlet-class>com.pwc.servlet.GoogleCallbackServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>googleCallBack</servlet-name>
+		<url-pattern>/googleCallBack</url-pattern>
+	</servlet-mapping>	
 </web-app>
