--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,15 @@
 			<artifactId>cxf-rt-transports-http-jetty</artifactId>
 			<version>2.7.10</version>
 		</dependency>
- 		<dependency>
+		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-common-utilities</artifactId>
 			<version>2.5.11</version>
-		</dependency>           
+		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-rs-security-cors</artifactId>
-			 <version>2.6.1</version>
+			<version>2.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -69,7 +69,7 @@
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -100,12 +100,12 @@
 			<groupId>xom</groupId>
 			<artifactId>xom</artifactId>
 			<version>1.2.5</version>
-		</dependency>	
-	    <dependency>
-	        <groupId>org.apache.commons</groupId>
-	        <artifactId>commons-io</artifactId>
-	        <version>1.3.2</version>
-	    </dependency>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.apis</groupId>
 			<artifactId>google-api-services-oauth2</artifactId>
@@ -117,9 +117,9 @@
 			<version>1.18.0-rc</version>
 		</dependency>
 		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <version>5.1.18</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.18</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
@@ -131,6 +131,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock</artifactId>
+			<version>1.46</version>
+			<classifier>standalone</classifier>
 		</dependency>
 	</dependencies>
 
