--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
 			<version>1.46</version>
 			<classifier>standalone</classifier>
 		</dependency>
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-junit4</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
