--- a/src/main/resources/oauthConfig.properties
+++ b/src/main/resources/oauthConfig.properties
@@ -1,13 +1,13 @@
+HOSTURL = https://54.187.87.218:8443
+
 TWITTER_KEY = Ernz2aoR2CB9i175nBgHBHmWW
 TWITTER_SEC = FZgyXccAUWgRduOX0p2VBFDQHFqHmMLgezWOOy9cVWkoeWMFPJ
-TWITTER_CALLBACK = http://54.187.87.218:9090/twitterCallback
 TWITTER_REQUESTTOKEN_URL = https://api.twitter.com/oauth/request_token
 TWITTER_AUTHTOKEN_URL = https://api.twitter.com/oauth/authenticate?oauth_token=
 TWITTER_ACCESSTOKEN_URL = https://api.twitter.com/oauth/access_token
 
 LINKEDIN_KEY = 77l30ewfcf20ev
 LINKEDIN_SEC = lPB9GfOZ2RV3PnCR
-LINKEDIN_CALLBACK = http://54.187.87.218:9090/linkedinCallback
 LINKEDIN_AUTHTOKEN_URL = https://www.linkedin.com/uas/oauth2/authorization
 LINKEDIN_ACCESSTOKEN_URL = https://www.linkedin.com/uas/oauth2/accessToken
 LINKEDIN_REFRESHTOKEN_REQUEST = https://api.linkedin.com/uas/oauth/requestToken
@@ -15,16 +15,12 @@ LINKEDIN_REFRESHTOKEN_OAUTH = https://www.linkedin.com/uas/oauth/authenticate?oa
 
 FACEBOOK_CLIENTID = 481141291987497
 FACEBOOK_SEC = fae20b93713ad59a2c2adc4683d5ab0e
-FACEBOOK_CALLBACK = http://54.187.87.218:9090/facebookCallBack
 FACEBOOK_ACCESSTOKEN_URL = https://graph.facebook.com/oauth/access_token
 FACEBOOK_AUTHTOKEN_URL = https://www.facebook.com/dialog/oauth
 
 GOOGLE_CLIENTID = 445231370454-ikdhnr5vg0c4ebbv33in9b8pcbkgejak.apps.googleusercontent.com
-GOOGLE_CALLBACK = http://ec2-54-187-87-218.us-west-2.compute.amazonaws.com:9090/googleCallBack
+#todo need to test
+GOOGLE_CALLBACK = https://ec2-54-187-87-218.us-west-2.compute.amazonaws.com:8443/googleCallBack
 GOOGLE_SEC = weOPrTKVLqd6dq2NTCRXUlbU
 
-TWITTER = Twitter
-FACEBOOK = Facebook
-GOOGLEPLUS = GooglePlus
-LINKEDIN = LinkedIn
-HOSTURL = http://54.187.87.218:9090
+
