--- a/src/main/resources/oauthTestConfig.properties
+++ b/src/main/resources/oauthTestConfig.properties
@@ -1,13 +1,12 @@
+HOSTURL=https://127.0.0.1:8443
 TWITTER_KEY = Do4IL2vG2ZaprFPxS4jJAOeM3
 TWITTER_SEC = IYejfCFa4Hl58FaQjwgUcconXUnqajUOqRyeKzRCiPGpSms0Q4
-TWITTER_CALLBACK = http://127.0.0.1:9090/twitterCallback
 TWITTER_REQUESTTOKEN_URL = https://api.twitter.com/oauth/request_token
 TWITTER_AUTHTOKEN_URL = https://api.twitter.com/oauth/authenticate?oauth_token=
 TWITTER_ACCESSTOKEN_URL = https://api.twitter.com/oauth/access_token
 
 LINKEDIN_KEY = 77l30ewfcf20ev
 LINKEDIN_SEC = lPB9GfOZ2RV3PnCR
-LINKEDIN_CALLBACK = http://127.0.0.1:9090/linkedinCallback
 LINKEDIN_AUTHTOKEN_URL = https://www.linkedin.com/uas/oauth2/authorization
 LINKEDIN_ACCESSTOKEN_URL = https://www.linkedin.com/uas/oauth2/accessToken
 LINKEDIN_REFRESHTOKEN_REQUEST = https://api.linkedin.com/uas/oauth/requestToken
@@ -15,16 +14,11 @@ LINKEDIN_REFRESHTOKEN_OAUTH = https://www.linkedin.com/uas/oauth/authenticate?oa
 
 FACEBOOK_CLIENTID = 481141291987497
 FACEBOOK_SEC = fae20b93713ad59a2c2adc4683d5ab0e
-FACEBOOK_CALLBACK = http://127.0.0.1:9090/facebookCallBack
 FACEBOOK_ACCESSTOKEN_URL = https://graph.facebook.com/oauth/access_token
 FACEBOOK_AUTHTOKEN_URL = https://www.facebook.com/dialog/oauth
 
 GOOGLE_CLIENTID = 317971618994-nuo529502295pkap9atvhhdkglia38vp.apps.googleusercontent.com
-GOOGLE_CALLBACK = http://127.0.0.1:9090/googleCallBack
+#todo need to test
+GOOGLE_CALLBACK = https://127.0.0.1:8443/googleCallBack
 GOOGLE_SEC = 5dH6D-RNvdsdz0xLnqGXOChv
 
-TWITTER = Twitter
-FACEBOOK =  Facebook
-GOOGLEPLUS = GooglePlus
-LINKEDIN = LinkedIn
-HOSTURL=http://127.0.0.1:9090
