update config file for android

--- a/src/main/resources/oauthAndroidConfig.properties
+++ b/src/main/resources/oauthAndroidConfig.properties
@@ -1,12 +1,12 @@
 HOSTURL=https://10.0.2.2:8443
-TWITTER_KEY = Do4IL2vG2ZaprFPxS4jJAOeM3
-TWITTER_SEC = IYejfCFa4Hl58FaQjwgUcconXUnqajUOqRyeKzRCiPGpSms0Q4
+TWITTER_KEY = 2gi2C1blyjfks5R8pHViCQ
+TWITTER_SEC = FaCqSiO7eGPIK9PUv9j6x5mCENWOt4WK4VMuYxQB8
 TWITTER_REQUESTTOKEN_URL = https://api.twitter.com/oauth/request_token
 TWITTER_AUTHTOKEN_URL = https://api.twitter.com/oauth/authenticate?oauth_token=
 TWITTER_ACCESSTOKEN_URL = https://api.twitter.com/oauth/access_token
 
-LINKEDIN_KEY = 77l30ewfcf20ev
-LINKEDIN_SEC = lPB9GfOZ2RV3PnCR
+LINKEDIN_KEY = 77b11et5lruzhu
+LINKEDIN_SEC = wv4Y4t2rJ7sSljsV
 LINKEDIN_AUTHTOKEN_URL = https://www.linkedin.com/uas/oauth2/authorization
 LINKEDIN_ACCESSTOKEN_URL = https://www.linkedin.com/uas/oauth2/accessToken
 LINKEDIN_REFRESHTOKEN_REQUEST = https://api.linkedin.com/uas/oauth/requestToken
@@ -17,8 +17,8 @@ FACEBOOK_SEC = fae20b93713ad59a2c2adc4683d5ab0e
 FACEBOOK_ACCESSTOKEN_URL = https://graph.facebook.com/oauth/access_token
 FACEBOOK_AUTHTOKEN_URL = https://www.facebook.com/dialog/oauth
 
-GOOGLE_CLIENTID = 317971618994-nuo529502295pkap9atvhhdkglia38vp.apps.googleusercontent.com
+GOOGLE_CLIENTID = 813483280675-h879tteoivpnmfeujgf2lg1j9t2jk9n7.apps.googleusercontent.com
 #todo need to test
 GOOGLE_CALLBACK = https://10.0.2.2:8443/googleCallBack
-GOOGLE_SEC = 5dH6D-RNvdsdz0xLnqGXOChv
+GOOGLE_SEC = sPiwrUUviy7j8L8DPZcDvkZq
 
