--- a/src/main/resources/oauthTestNormalConfig.properties
+++ b/src/main/resources/oauthTestNormalConfig.properties
@@ -1,7 +1,7 @@
 HOSTURL = https://54.187.87.218
 
-TWITTER_KEY = Ernz2aoR2CB9i175nBgHBHmWW
-TWITTER_SEC = FZgyXccAUWgRduOX0p2VBFDQHFqHmMLgezWOOy9cVWkoeWMFPJ
+TWITTER_KEY = qCEyFIf0RehbUglehaOug
+TWITTER_SEC = dbcOAa4PSWn5bhmKLT1S5dslqIOAzTYpV145dj77h8
 TWITTER_REQUESTTOKEN_URL = https://api.twitter.com/oauth/request_token
 TWITTER_AUTHTOKEN_URL = https://api.twitter.com/oauth/authenticate?oauth_token=
 TWITTER_ACCESSTOKEN_URL = https://api.twitter.com/oauth/access_token
